--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <img src="img/background.png" alt="">
     </div>
     <nav>
-        <div class="menu__mobile">
-            <a class="humberger"><span></span></a>
-            <a href="#"><img src="img/logo.svg" alt=""></a>
+        <div class="container">
+            <div class="menu__mobile">
+                <a class="humberger"><span></span></a>
+                <a href="#"><img src="img/logo.svg" alt=""></a>
+            </div>
         </div>
         <div class="menu__content">
             <ul>
@@ -113,6 +115,133 @@
                     <img class="bannerImg" src="img/banner-img.png" alt="FastCA banner image">
                 </div>
             </div>
+        </section>
+        <section class="slide">
+            <div class="container">
+                <div class="slide__wrap">
+                    <div class="slide__wrap-item">
+                        <div class="slide__wrap-text">
+                            <h2>Các sự kiện đang diễn ra</h2>
+                            <p>Hiện nay, chữ ký số FastCA đang được Tổng cục Thuế, Tổng cục Hải quan, Bảo hiểm xã hội, Bộ Y tế,... và các Bộ/Ban/Ngành khác sử dụng.</p>
+                        </div>
+                        <img src="https://via.placeholder.com/1330x250" alt="">
+                    </div>
+                    <div class="dots">
+                        <span class="active"></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="partner">
+            <div class="container">
+                <div class="partner__wrap">
+                        <img src="img/bidv.png" alt="">
+                        <img src="img/pti.png" alt="">
+                        <img src="img/scb.png" alt="">
+                        <img src="img/petrp.png" alt="">
+                        <img src="img/baolong.png" alt="">
+                        <img src="img/lienviet.png" alt="">
+                        <img src="img/seabank.png" alt="">
+                        <img src="img/bhxh.png" alt="">
+                        <img src="img/media.png" alt="">
+                        <img src="img/lotte.png" alt="">
+                    </div>
+                    <div class="text">
+                        <p>FastCA được tin dùng bởi hơn <span>100.000</span> cá nhân và doanh nghiệp</p>
+                    </div>
+                </div>
+            </div>
+        </section> 
+        <section class="products">
+            <div class="container">
+                <div class="product__wrap">
+                    <div class="product__wrap-item">
+                        <img class="product_img" src="img/item1.png" alt="">
+                        <h2>Chứng thư số cho </br><span>tổ chức, doanh nghiệp</span></h2>
+                        <p>Chứng thư số dành cho Tổ chức là loại chứng thư số đại diện cho Tổ chức, khi sử dụng trong giao dịch điện tử có giá trị pháp lý tương đương con dấu của Tổ chức. Cặp khóa và chứng thư số này được chứa trong thiết bị PKI chuyên dụng như PKI Token hoặc Smartcard.</p>
+                        <div class="button">
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Đăng Ký</a>
+                                </div>
+                            </div>
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Tìm Hiểu</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow">
+                            <img class="product_arrow" src="img/arrow-gray.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product__wrap-item">
+                        <img class="product_img" src="img/item1.png" alt="">
+                        <h2>Chứng thư số cho </br><span>tổ chức, doanh nghiệp</span></h2>
+                        <p>Chứng thư số dành cho Tổ chức là loại chứng thư số đại diện cho Tổ chức, khi sử dụng trong giao dịch điện tử có giá trị pháp lý tương đương con dấu của Tổ chức. Cặp khóa và chứng thư số này được chứa trong thiết bị PKI chuyên dụng như PKI Token hoặc Smartcard.</p>
+                        <div class="button">
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Đăng Ký</a>
+                                </div>
+                            </div>
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Tìm Hiểu</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow">
+                            <img class="product_arrow" src="img/arrow-gray.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product__wrap-item">
+                        <img class="product_img" src="img/item1.png" alt="">
+                        <h2>Chứng thư số cho </br><span>tổ chức, doanh nghiệp</span></h2>
+                        <p>Chứng thư số dành cho Tổ chức là loại chứng thư số đại diện cho Tổ chức, khi sử dụng trong giao dịch điện tử có giá trị pháp lý tương đương con dấu của Tổ chức. Cặp khóa và chứng thư số này được chứa trong thiết bị PKI chuyên dụng như PKI Token hoặc Smartcard.</p>
+                        <div class="button">
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Đăng Ký</a>
+                                </div>
+                            </div>
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Tìm Hiểu</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow">
+                            <img class="product_arrow" src="img/arrow-gray.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="product__wrap-item">
+                        <img class="product_img" src="img/item1.png" alt="">
+                        <h2>Chứng thư số cho </br><span>tổ chức, doanh nghiệp</span></h2>
+                        <p>Chứng thư số dành cho Tổ chức là loại chứng thư số đại diện cho Tổ chức, khi sử dụng trong giao dịch điện tử có giá trị pháp lý tương đương con dấu của Tổ chức. Cặp khóa và chứng thư số này được chứa trong thiết bị PKI chuyên dụng như PKI Token hoặc Smartcard.</p>
+                        <div class="button">
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Đăng Ký</a>
+                                </div>
+                            </div>
+                            <div class="btn blue">
+                                <div class="btn__wrap">
+                                    <a href="#">Tìm Hiểu</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="arrow">
+                            <img class="product_arrow" src="img/arrow-gray.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="solution">
+            <div class="text"><p>Dịch vụ FastCA <span>giải quyết nhiều vấn đề</span></p></div>
         </section>
     </main>
 <body>        
