--- a/index.html
+++ b/index.html
@@ -118,18 +118,32 @@
         </section>
         <section class="slide">
             <div class="container">
-                <div class="slide__wrap">
-                    <div class="slide__wrap-item">
+                <div class="dot">
+                    <!-- <span class="active"></span>
+                    <span></span>
+                    <span></span> -->
+                </div>
+                <div class="slide__wrap main-carousel">
+                    <div class="slide__wrap-item carousel-cell">
                         <div class="slide__wrap-text">
                             <h2>Các sự kiện đang diễn ra</h2>
                             <p>Hiện nay, chữ ký số FastCA đang được Tổng cục Thuế, Tổng cục Hải quan, Bảo hiểm xã hội, Bộ Y tế,... và các Bộ/Ban/Ngành khác sử dụng.</p>
                         </div>
-                        <img src="https://via.placeholder.com/1330x250" alt="">
+                        <img src="https://via.placeholder.com/1331x250" alt="">
                     </div>
-                    <div class="dots">
-                        <span class="active"></span>
-                        <span></span>
-                        <span></span>
+                    <div class="slide__wrap-item carousel-cell">
+                        <div class="slide__wrap-text">
+                            <h2>Các sự kiện đang diễn ra</h2>
+                            <p>Hiện nay, chữ ký số FastCA đang được Tổng cục Thuế, Tổng cục Hải quan, Bảo hiểm xã hội, Bộ Y tế,... và các Bộ/Ban/Ngành khác sử dụng.</p>
+                        </div>
+                        <img src="https://via.placeholder.com/1331x250" alt="">
+                    </div>
+                    <div class="slide__wrap-item carousel-cell">
+                        <div class="slide__wrap-text">
+                            <h2>Các sự kiện đang diễn ra</h2>
+                            <p>Hiện nay, chữ ký số FastCA đang được Tổng cục Thuế, Tổng cục Hải quan, Bảo hiểm xã hội, Bộ Y tế,... và các Bộ/Ban/Ngành khác sử dụng.</p>
+                        </div>
+                        <img src="https://via.placeholder.com/1331x250" alt="">
                     </div>
                 </div>
             </div>
@@ -242,8 +256,177 @@
         </section>
         <section class="solution">
             <div class="text"><p>Dịch vụ FastCA <span>giải quyết nhiều vấn đề</span></p></div>
+            <div class="container">
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/visa.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Tài chính - Ngân hàng</h2>
+                        <p>Với những giao dịch quan trọng và giá trị lớn thì chữ ký số là một giải pháp an toàn, hiệu quả cho cả ngân hàng (người cung cấp dịch vụ) lẫn khách hàng (người sử dụng dịch vụ).</p>
+                    </div>
+                </div>
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/gorverment.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Chính phủ điện tử</h2>
+                        <p>Chữ ký số đang là giải pháp cốt lõi cho việc xây dựng Chính phủ điện tử tại Việt Nam. Góp phần tăng tính minh bạch, giảm chi phí và nâng cao hiệu quả hoạt động của Chính phủ.</p>
+                    </div>
+                </div>
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/e-commerce.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Thương mại điện tử</h2>
+                        <p>Thương mại điện tử đã trở nên phổ biến trong nền kinh tế. Giải pháp bảo đảm an toàn cho các giao dịch giữa người mua và người bán chính là sử dụng chữ ký số trong các giao dịch đó.</p>
+                    </div>
+                </div>
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/receipt.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Hóa đơn điện tử</h2>
+                        <p>Đến năm 2020, toàn bộ nền kinh tế Việt Nam sẽ sử dụng hóa đơn điện tử trong các hoạt động thương mại nội địa và quốc tế. Hóa đơn điện tử chỉ có giá trị khi được ký bởi chữ ký số.</p>
+                    </div>
+                </div>
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/dashboard.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Quản trị doanh nghiệp</h2>
+                        <p>Hiện nay, có nhiều các ứng dụng giúp quản lý, vận hành doanh nghiệp hiệu quả đều có thể sử dụng chữ ký số như: Văn phòng điện tử; Thuế điện tử; Bảo hiểm điện tử; Hải quan điện tử…</p>
+                    </div>
+                </div>
+                <div class="solution__content">
+                    <div class="solution__content-top">
+                        <img src="img/more.png" alt="">
+                        <div class="btn viewmore">
+                            <div class="btn__wrap">
+                                <a href="#">Chi tiết</a><i><img src="img/arrow-blue.svg" alt=""></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="solution__content-text">
+                        <h2>Mobile CA</h2>
+                        <p>Giải pháp chứng thực chữ ký số trên thiết bị di động – Mobile PKI là giải pháp thực hiện xác thực điện tử trên nền tảng di động để thực hiện các giao dịch điện tử có độ bảo mật cao.</p>
+                    </div>
+                </div>
+            </div>
         </section>
+        <div class="news">
+            <div class="container">
+                <h2>Tin Tức FastCA</h2>
+                <div class="new__content">
+                    <div class="new__content-left">
+                        <div class="content-img"><a href="#"><img src="img/new.png" alt=""></a></div>
+                        <div class="content-text">
+                            <div class="text new">
+                                <p>Ngày 27 tháng 9 năm 2020</p>
+                            </div>
+                            <a href="#"><h2>Tài chính - Ngân hàng</h2></a>
+                            <a href="#"><p>Với những giao dịch quan trọng và giá trị lớn thì chữ ký số là một giải pháp an toàn, hiệu quả cho cả ngân hàng (người cung cấp dịch vụ) lẫn khách hàng (người sử dụng dịch vụ).</p></a>
+                        </div>
+                    </div>
+                    <div class="new__content-right">
+                        <div class="item">
+                            <p>26/9/2020</p>
+                            <h2>FastCA 5 năm - Chặng đường khát vọng</h2>
+                        </div>
+                        <div class="item">
+                            <p>26/9/2020</p>
+                            <h2>FastCA 5 năm - Chặng đường khát vọng,</h2>
+                        </div>
+                        <div class="item">
+                            <p>26/9/2020</p>
+                            <h2>Hướng dẫn kiểm tra email giả mạo Nhà cung cấp</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="logo"><img src="img/logoFasca.svg" alt=""></div>
+            <div class="hr"></div>
+            <div class="footer__content">
+                <div class="ftcon products">
+                    <h2>Sản Phẩm</h2>
+                    <a href="#">CKS cho tổ chức, doanh nghiệp</a>
+                    <a href="#">CKS cho cá nhân độc lập</a>
+                    <a href="#">CKS cho hóa đơn điện tử</a>
+                    <a href="#">CKS cho cán bộ nhân viên thuộc tổ chức</a>
+                    <a href="#">CKS cho thiết bị HSM</a>
+                    <a href="#">CKS cho thiết bị di động</a>
+                </div>
+                <div class="ftcon price">
+                    <h2>Bảng giá</h2>
+                    <a href="#">CKS cho Tổ chức</a>
+                    <a href="#">CKS cho Cá nhân</a>
+                    <a href="#">CKS cho Hóa đơn điện tử</a>
+                    <a href="#">CKS cho Cán bộ nhân viên thuộc tổ chức</a>
+                    <a href="#">CKS cho Thiết bị HSM</a>
+                    <a href="#">CKS cho Thiết bị di động</a>
+                </div>
+                <div class="ftcon solution">
+                    <h2>Giải Pháp</h2>
+                    <a href="#">Tài chính - Ngân hàng</a>
+                    <a href="#">Chính phủ điện tử</a>
+                    <a href="#">Thương mại điện tử</a>
+                    <a href="#">Hóa đơn điện tử</a>
+                    <a href="#">Quản trị doanh nghiệp</a>
+                    <a href="#">Mobile CA</a>
+                </div>
+                <div class="ftcon support">
+                    <h2>Hỗ Trợ</h2>
+                    <a href="#">Hướng dân sử dụng</a>
+                    <a href="#">Thuế điện tử</a>
+                    <a href="#">Hải quan điện tử</a>
+                    <a href="#">Cổng thông tin một cửa quốc gia</a>
+                    <a href="#">Dịch vụ công trực tuyến</a>
+                    <a href="#">Dịch vụ công trực tuyến</a>
+                    <a href="#">Môi trường cài đặt</a>
+                </div>
+            </div>
+            <div class="hr"></div>
+            <div class="company">
+                <h2>Trụ Sở Chính</h2>
+                <p>Địa chỉ: Tầng 5, toà nhà Sudico, KĐT Sông Đà, Mễ Trì, Hà Nội</p>
+                <p>Điện Thoại: 19002158</p>
+                <p>Email: info@fastca.vn</p>
+            </div>
+        </div>
+    </footer>
 <body>        
     <script type="text/javascript" src="dest/jsmain.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
