chuan bi ve thoi

--- a/index.html
+++ b/index.html
@@ -343,6 +343,21 @@
                 </div>
             </div>
         </section>
+        <section class="sologan">
+            <div class="container">
+                <div class="sologan__text">
+                    <h2 class="yellow">An toàn. Tiết kiệm. Hiệu quả. </h2>
+                    <h2 class="white">Chứng thư số dành riêng cho bạn</h2>
+                </div>
+                <div class="sologan__button">
+                    <div class="btn btn_sologan">
+                        <div class="btn__wrap ">
+                            <a href="#">Tư vấn đăng ký sản phẩm dịch vụ</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="news">
             <div class="container">
                 <h2>Tin Tức FastCA</h2>
@@ -424,6 +439,15 @@
                 <p>Địa chỉ: Tầng 5, toà nhà Sudico, KĐT Sông Đà, Mễ Trì, Hà Nội</p>
                 <p>Điện Thoại: 19002158</p>
                 <p>Email: info@fastca.vn</p>
+            </div>
+            <div class="end">
+                <div class="end__left">
+                    <a href="#">Gửi Yêu Cầu</a>
+                    <a href="#">Các Câu Hỏi Thường Gặp</a>
+                </div>
+                <div class="end__right">
+                    <p>Copyright © 2020 FastCA. All rights reserved.</p>
+                </div>
             </div>
         </div>
     </footer>
